
- CopticChronology
  Fixed regression in month of year calculation which affected getMaximumValue
  on dayOfMonth field.

- CopticChronology
  Fixed month duration field to handle short 13th month correctly.

- ZonedChronology
  Fixed getting text values for fields from getAs[Short]Text(int value, Locale locale).

- Gregorian, Julian, GJ and Coptic
  These Chronology classes did not correctly store the minimum days in first week
  during serialization

- DateTimeFormatter
  Fixed printing of time zone name near DST transition.


Enhancements since 1.1
----------------------
- IslamicChronology
- EthiopicChronology
  New Chronologies

- DateTime.Property.withMaximumValue() (also DateMidnight/YearMonthDay etc)
- DateTime.Property.withMinimumValue()
  Returns a copy of the base datetime with the specified field set to
  the maximum or minimum value. This is useful to get the last day of the month.
  - DateTime lastDayOfMonth = dt.dayOfMonth().withMaximumValue();

- DateTime.Property.toInterval() (also DateMidnight/MutableDateTime)
  New method to convert return an Interval object over the span of the property
  Thus dt.monthOfYear().toInterval() returns an interval from the start to
  the end of the month

- MutableDateTime.property(DateTimeFieldType)
  Gets the property by type. Complements the method already on DateTime/DateMidnight.

- YearMonthDay.fromCalendarFields()
- YearMonthDay.fromDateFields()
- TimeOfDay.fromCalendarFields()
- TimeOfDay.fromDateFields()
  New factory methods to create a YearMonthDay/TimeOfDay using exactly the same
  field values as the JDK objects, thus ignoring time zone effects

- FieldUtils
  Performance optimization when adding by scalars of one or negative one. The
  overflow detecting multiplication skips the multiply and divide check for
  these values.


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team